# JOB

./: .gitignore  CMakeLists.txt  README.md  config.ini
DNS/: dns.h  main.h  server.h
libft-master/: CMakeLists.txt
libft-master/includes/: libft.h
libft-master/sources/: ft_fast_input_gnl.c
libft-master/sources/ft_darr/: ft_dyn_arr_5.c
project/: blacklist.c  dns.c  main.c  query.c  server.c
